# serial-network-based-comm-in-embedded

./: README.md  install.sh
Documents/GUI_Documents/html/: MainWindow_8py.html  Mqtt_8py.html  annotated.html  annotated_dup.js  classMainWindow_1_1MainWindow-members.html  classMainWindow_1_1MainWindow.html  classMainWindow_1_1MainWindow.js  classMainWindow_1_1MainWindow__coll__graph.map  classMainWindow_1_1MainWindow__coll__graph.md5  classMainWindow_1_1MqttSettingsWindow-members.html  classMainWindow_1_1MqttSettingsWindow.html  classMainWindow_1_1MqttSettingsWindow.js  classMainWindow_1_1MqttSettingsWindow__inherit__graph.map  classMainWindow_1_1MqttSettingsWindow__inherit__graph.md5  (+35 more)
EmbeddedApplication/: Configuration.h  EmbeddedApplication.ino  main.ino
GUI/: Doxyfile  main.py  requirements.txt
GUI/DoxygenFiles/: mainpage.h
GUI/config/: mqttConfig.ini
GUI/lib/: MainWindow.py  Mqtt.py
SerialPortDriver/: CMakeLists.txt  Doxyfile  runSerialPortDriver.sh
SerialPortDriver/app/: main.cpp
SerialPortDriver/config/: config.ini
SerialPortDriver/lib/: Configuration.h  FailCode.h  IniParser.h  IniParserConfig.h  Message.h  MessageConfig.h  MqttComm.h  MqttConfig.h  SerialComm.h  SerialConfig.h
SerialPortDriver/lib/failcode/: FailCode.h
SerialPortDriver/lib/iniparser/: IniParser.h  IniParserConfig.h
SerialPortDriver/lib/message/: Message.h  MessageConfig.h
SerialPortDriver/lib/mqtt/: MqttComm.h  MqttConfig.h
SerialPortDriver/lib/serial/: SerialComm.h  SerialConfig.h
SerialPortDriver/src/: IniParser.cpp  Message.cpp  MqttComm.cpp  SerialComm.cpp
(+338 files in other folders)
